Use DrawImage instaed of DrawTile when drawing a background and the entire rect to be painted fits inside a single tile (either because we're no-repeat or because the dirty rect is small enough).  Bug 359392, r=vlad, sr=roc, a=vlad for 1.9a1 landing.